force-app/main/default/objects/Key_Date__c.object
<CustomObject>
    <description>Key dates to record against records in UniCRM</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description for the key date entry</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>Key date&apos;s due date</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funding_Scheme_Round__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Funding scheme this key date belongs to</description>
        <label>Funding Scheme Round</label>
        <referenceTo>Funding_Scheme__c</referenceTo>
        <relationshipLabel>Key Dates</relationshipLabel>
        <relationshipName>Key_Dates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of Key Date</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Awarded</fullName>
                </value>
                <value>
                    <fullName>External_EoI</fullName>
                    <label>External EoI</label>
                </value>
                <value>
                    <fullName>Full App Submission</fullName>
                </value>
                <value>
                    <fullName>Internal_EoI</fullName>
                    <isActive>false</isActive>
                    <label>Internal EoI</label>
                </value>
                <value>
                    <fullName>Minimum Data</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pipeline</fullName>
                </value>
                <value>
                    <fullName>Reporting period</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Key Date</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Due_Date__c</columns>
        <columns>Funding_Scheme_Round__c</columns>
        <columns>Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Due_Date__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2024</value>
        </filters>
        <filters>
            <field>Due_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>1/1/2025</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Key Date Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Key Dates</pluralLabel>
    <recordTypes>
        <fullName>Funding_Scheme_Date</fullName>
        <active>true</active>
        <description>Key Dates to record against funding schemes</description>
        <label>Funding Scheme Date</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>